# ieee-cs-rookies-2024

./: .gitignore
task-1/: Cargo.toml  README.md
task-2/: README.md
task-3/: Cargo.toml
task-4/: Cargo.toml  README.md
task-5/: Cargo.toml
